<resources>
    <string name="app_name">Service Novigrad</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="login">Se connecter</string>
    <string name="signup">Créer un compte</string>
    <string name="wrong_password">Mot de passe incorrect!</string>
    <string name="wrong_user">L\'utilisateur n\'existe pas</string>
    <string name="role_prompt">Vous créez un compte en tant que:</string>
    <string name="user_already_exists">Ce nom d\'utilisateur est déjà utilisé</string>
    <string name="admin_delete_user">Supprimer compte</string>
    <string name="admin_confirm_delete_user">Etes-vous sûr que vous voulez supprimer le compte suivant?</string>
    <string name="admin_confirm_delete_form">Etes-vous sûr que vous voulez supprimer le service suivant?</string>
    <string name="admin_manage_users">Gère les comptes</string>
    <string name="admin_manage_services">Gère les services</string>
    <string name="admin_edit_service">Modifier le service</string>
    <string name="admin_delete_service">Supprimer le service</string>
    <string name="admin_create_service">Créer un service</string>
    <string name="admin_add_element">Ajouter un</string>
    <string name="elements_desc">Éléments (du forme \"A, B, C\")</string>
    <string name="service_name">Nom du service</string>
    <string name="limit">Limite de caractères</string>
    <string name="number">Nombre</string>
    <string name="validator">Validateur</string>
    <string name="save">Sauvegarder</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="employee_handle_profile">Modifier le profil de la succursale</string>
    <string name="employee_handle_requests">Gérer les demandes de services</string>
    <string name="select_days">Jours d\'ouverture</string>
    <string name="select_hours">Heures d\'ouverture</string>
    <string name="à">à</string>
    <string name="select_services">Services offerts</string>
    <string name="Sunday">Dimanche</string>
    <string name="Monday">Lundi</string>
    <string name="Tuesday">Mardi</string>
    <string name="Wednesday">Mercredi</string>
    <string name="Thursday">Jeudi</string>
    <string name="Friday">Vendredi</string>
    <string name="Saturday">Samedi</string>
    <string name="offered">Offert</string>
    <string name="not_offered">Non-offert</string>
    <string name="address">Adresse</string>
    <string name="view_request">Voir la demande</string>
    <string name="approve">Approuver</string>
    <string name="deny">Refuser</string>
    <string name="submit">Soumettre la demande</string>
    <string name="cancel">Annuler la demande</string>
    <string name="search">Rechercher une succursale</string>
    <string name="search_by">Rechercher par:</string>
    <string name="hours">Heures de travail</string>
    <string name="services">Service offert</string>
    <string name="view_services">Voir les services</string>
    <string name="create_demand">Créer une demande</string>
    <string name="rate">Soumettez votre note</string>
    <string name="ok">OK</string>
    <string name="document_disclaimer">C\'est ici que l\'utilisateur téléchargerait une image du document demandé, qui serait ensuite téléchargée sur le stockage cloud de Service Novigrad. Puisque cela nécessiterait de payer pour le stockage de fichiers en ligne, ce texte est ici à sa place.</string>
    <string-array name="signup_roles">
        <item>Client</item>
        <item>Employé de la succursale</item>
    </string-array>
    <string-array name="form_elements">
        <item>TextField</item>
        <item>Spinner</item>
        <item>Document</item>
    </string-array>
    <string-array name="field_validators">
        <item>Base</item>
        <item>Username/Password</item>
        <item>Nom</item>
        <item>Adresse</item>
        <item>Date</item>
    </string-array>
    <string-array name="times">
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
    </string-array>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>